Collapse short edges affects masked geometry #34348

Closed
opened 2013-02-21 17:44:20 +01:00 by Stanislav Blinov · 4 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.10 amd64
NVIDIA GeForce GTS 450 (304.51 driver)

- Blender version with error, and version that worked ---

Version with error: r54602
Version that worked: ???

- Short description of error ---

When sculpting in dynamic topology mode, brushing over masked areas with Collapse Short Edges results in loss of detail in those areas.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Load default blender scene and select default cube
  2. Add and apply level 6 subsurf modifier (to get nice initial definition)
  3. Enter sculpt mode
  4. Using Mask brush, mask out an area of the mesh
  5. Enable Dynamic Topology and Collapse Short Edges. Default detail level should be at 30.
  6. Make sure that your zoom level is set so that one polygon of the mesh is less than 30 pixels (normally this would be the case after 6 level subsurf and zooming so that the mesh almost fills the screen).
  7. Select Draw brush and set brush strength to 0 (the value doesn't matter, 0 just does not displace geometry).
  8. Stroke over masked area
  9. Observe how masked geometry gets rearranged according to Collapse Short Edges

%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.10 amd64 NVIDIA GeForce GTS 450 (304.51 driver) - Blender version with error, and version that worked --- Version with error: r54602 Version that worked: ??? - Short description of error --- When sculpting in dynamic topology mode, brushing over masked areas with Collapse Short Edges results in loss of detail in those areas. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Load default blender scene and select default cube 2. Add and apply level 6 subsurf modifier (to get nice initial definition) 3. Enter sculpt mode 4. Using Mask brush, mask out an area of the mesh 5. Enable Dynamic Topology and Collapse Short Edges. Default detail level should be at 30. 6. Make sure that your zoom level is set so that one polygon of the mesh is less than 30 pixels (normally this would be the case after 6 level subsurf and zooming so that the mesh almost fills the screen). 7. Select Draw brush and set brush strength to 0 (the value doesn't matter, 0 just does not displace geometry). 8. Stroke over masked area 9. Observe how masked geometry gets rearranged according to Collapse Short Edges %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed here%%%

%%%Confirmed here%%%

%%%Fixed in r55344%%%

%%%Fixed in r55344%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34348
No description provided.